# NeRFtoGSandBack

./: .gitignore  README.md  output.json
nerfgs/: pyproject.toml
nerfgs/nerfgs/: nerfgs_config.py  nerfgs_datamanager.py  nerfgs_exporter.py  nerfgs_field.py  nerfgs_model.py  nerfgs_pipeline.py  nerfgs_render.py
nerfsh/: pyproject.toml
nerfsh/nerfsh/: nerfsh_config.py  nerfsh_exporter.py  nerfsh_field.py  nerfsh_model.py  nerfsh_pipeline.py
splatting/: pyproject.toml
splatting/splatting/: splatting_config.py  splatting_model.py  splatting_pipeline.py  splatting_render.py
