[project]
name = "nerfgs"
description = "nerfgs: convert nerfsh to gs"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0", "plyfile >= 1.0.3"] 

[tool.setuptools.packages.find]
include = ["nerfgs*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nerfgs = 'nerfgs.nerfgs_config:nerfgs'

[project.scripts]
ns-nerfgs-render = "nerfgs.nerfgs_render:entrypoint"
