[project]
name = "nerfsh"
description = "nerfsh: nerf with spherical harmonics output."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nerfsh*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nerfsh = 'nerfsh.nerfsh_config:nerfsh'

[project.scripts]
ns-export-nerfsh = "nerfsh.nerfsh_exporter:entrypoint"
