[project]
name = "splatting"
description = "splatting repository."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["splatting*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
splatting = 'splatting.splatting_config:splatting'

[project.scripts]
ns-splatting-render = "splatting.splatting_render:entrypoint"
